...
                  const SizedBox(height: 16),
                ],
                TextField(
                  controller: _titleController,
                  enabled: headerEnabled,
                  decoration: InputDecoration(
                    labelText: 'Título',
                    errorText: error == null
                        ? null
                        : error is Failure
                            ? error.message
                            : error.toString(),
                  ),
...
